@@ -1,0 +1,532 @@
+<?xml version="1.0"?>
+<dc-workflow workflow_id="eea_data_workflow" title="EEA data workflow" description="" state_variable="review_state"         initial_state="draft" manager_bypass="True" >
+ <permission>Access contents information</permission>
+ <permission>Delete objects</permission>
+ <permission>Modify portal content</permission>
+ <permission>View</permission>
+ <permission>Delete portal content</permission>
+ <state state_id="content_pending" title="Pending (publishing review)" >
+  <description>Content pending internal review. Only EEA CMS users can access this content. Eionet users cannot see this content. </description>
+  <exit-transition transition_id="fake_publish" />
+  <exit-transition transition_id="publish" />
+  <exit-transition transition_id="publishEionet" />
+  <exit-transition transition_id="reject" />
+  <exit-transition transition_id="show" />
+  <permission-map name="Access contents information" acquired="False">
+   <permission-role>CommonEditor</permission-role>
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>Site Administrator</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>Manager</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>CommonEditor</permission-role>
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>Site Administrator</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="draft" title="First draft" >
+  <description>This is the first state when a new item is created</description>
+  <exit-transition transition_id="markForDeletion" />
+  <exit-transition transition_id="publishEionet" />
+  <exit-transition transition_id="quickPublish" />
+  <exit-transition transition_id="show" />
+  <exit-transition transition_id="submitContentReview" />
+  <permission-map name="Access contents information" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>ProofReader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Member</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Member</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>ProofReader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="marked_for_deletion" title="Marked for deletion" >
+  <description>This item has been marked for permanent deletion. It will be deleted at a later stage by an automatic cleanup process.</description>
+  <exit-transition transition_id="enable" />
+  <permission-map name="Access contents information" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="True">
+   
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Reader</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Reader</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="published" title="Published" >
+  <exit-transition transition_id="hide" />
+  <exit-transition transition_id="retract" />
+  <permission-map name="Access contents information" acquired="True">
+   <permission-role>Anonymous</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>ProofReader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="True">
+   <permission-role>Anonymous</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="published_eionet" title="Restricted to Eionet only (login required)" >
+  <description>This state will make the content available to visitor with Eionet/Circa login.</description>
+  <exit-transition transition_id="fake_publish" />
+  <exit-transition transition_id="publish" />
+  <exit-transition transition_id="retract" />
+  <exit-transition transition_id="show" />
+  <permission-map name="Access contents information" acquired="True">
+   
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>ProofReader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>Authenticated</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="retracted" title="Retracted" >
+  <description>Items in this state have been retracted from one of the publishing state due to discovered relevant errors in content.</description>
+  <exit-transition transition_id="enable" />
+  <permission-map name="Access contents information" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="True">
+   
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reviewer</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Reader</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Reader</group-role>
+  </group-map>
+  
+ </state>
+ <state state_id="visible" title="Public draft (visible only with direct link)" >
+  <description>Item still visible with direct link, but hidden is searches and listings on the site. Usable for external light reviews with no login required.</description>
+  <exit-transition transition_id="fake_publish" />
+  <exit-transition transition_id="publish" />
+  <exit-transition transition_id="retract" />
+  <exit-transition transition_id="simpleSubmit" />
+  <permission-map name="Access contents information" acquired="False">
+   <permission-role>Anonymous</permission-role>
+   <permission-role>Authenticated</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
+  <permission-map name="Delete objects" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Delete portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Site Administrator</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content" acquired="False">
+   <permission-role>ContentManager</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>ProofReader</permission-role>
+   <permission-role>Reviewer</permission-role>
+   <permission-role>WebReviewer</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="False">
+   <permission-role>Anonymous</permission-role>
+   <permission-role>Authenticated</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
+  <group-map name="WebReviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-reviewers">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+   <group-role>Reviewer</group-role>
+  </group-map>
+  <group-map name="data-service-editors">
+   <group-role>Contributor</group-role>
+   <group-role>Editor</group-role>
+  </group-map>
+  
+ </state>
+ <transition transition_id="enable" title="enable" new_state="draft" trigger="USER" before_script="" after_script="" >
+  <action url="" category="workflow" icon="">enable</action>
+  <guard >
+   <guard-role>Manager</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="fake_publish" title="Pre-publish check" new_state="" trigger="USER" before_script="fake_transition" after_script="" >
+  <action url="" category="workflow" icon="">Publish</action>
+  <guard >
+   <guard-role>Manager</guard-role>
+   <guard-role>Reviewer</guard-role>
+   <guard-expression>python:not path('here/@@get_readiness').is_ready_for('published')</guard-expression
+   >
+  </guard>
+  
+ </transition>
+ <transition transition_id="hide" title="Hide item from search and listings (Unpublish)" new_state="visible" trigger="USER" before_script="" after_script="" >
+  <description>Content still available via direct link, but hidden in listings and searches.</description>
+  <action url="" category="workflow" icon="">Hide item from search and listings (Unpublish)</action>
+  <guard >
+   <guard-group>Administrators</guard-group>
+  </guard>
+  
+ </transition>
+ <transition transition_id="markForDeletion" title="Mark for deletion" new_state="marked_for_deletion" trigger="USER" before_script="" after_script="" >
+  <description>This transition is used to mark item for deletion, like putting the items in a waste bin. Useful when users do not have deletion permissions. Items can then be deleted by a scheduled process with specific rights.</description>
+  <action url="" category="workflow" icon="">Mark for deletion</action>
+  <guard >
+   <guard-role>Editor</guard-role>
+   <guard-role>ContentManager</guard-role>
+   <guard-role>Reviewer</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="publish" title="Publish" new_state="published" trigger="USER" before_script="" after_script="" >
+  <action url="" category="workflow" icon="">Publish</action>
+  <guard >
+   <guard-role>Reviewer</guard-role>
+   <guard-role>Manager</guard-role>
+   <guard-expression>python:path('here/@@get_readiness').is_ready_for('published') and ((not here.getField('file')) or (here.getField('file') and here.getField('file').get_size(here) &lt; 104857600))</guard-expression
+   >
+  </guard>
+  
+ </transition>
+ <transition transition_id="publishEionet" title="Restrict to Eionet members (login required)" new_state="published_eionet" trigger="USER" before_script="" after_script="" >
+  <description>Makes item visible for users with Eionet/Circa login</description>
+  <action url="" category="workflow" icon="">Restrict to Eionet members (login required)</action>
+  <guard >
+   <guard-role>ContentManager</guard-role>
+   <guard-role>Reviewer</guard-role>
+   <guard-role>Manager</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="quickPublish" title="Publish" new_state="published" trigger="USER" before_script="" after_script="" >
+  <action url="" category="workflow" icon="">Publish</action>
+  <guard >
+   <guard-role>Manager</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="reject" title="Back for revision" new_state="draft" trigger="USER" before_script="" after_script="" >
+  <action url="" category="workflow" icon="">Back for revision</action>
+  <guard >
+   <guard-role>Manager</guard-role>
+   <guard-role>Reviewer</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="retract" title="Retract" new_state="retracted" trigger="USER" before_script="" after_script="" >
+  <action url="" category="workflow" icon="">Retract</action>
+  <guard >
+   <guard-group>Administrators</guard-group>
+  </guard>
+  
+ </transition>
+ <transition transition_id="show" title="Make visible only via direct link, still hidden in listings/search" new_state="visible" trigger="USER" before_script="" after_script="" >
+  <description>This will make the item visible with direct link, but not show up in listings.</description>
+  <action url="" category="workflow" icon="">Make visible only via direct link, still hidden in listings/search</action>
+  <guard >
+   <guard-role>ContentManager</guard-role>
+   <guard-role>Reviewer</guard-role>
+   <guard-role>Manager</guard-role>
+  </guard>
+  
+ </transition>
+ <transition transition_id="simpleSubmit" title="Submit for final publishing" new_state="" trigger="USER" before_script="" after_script="" >
+  <description>This workflow action will not change state. It will just notify for publishing.</description>
+  <action url="" category="workflow" icon="">Submit for final publishing</action>
+  <guard >
+   <guard-role>ContentManager</guard-role>
+   <guard-expression>python: here.portal_type in  ['Data', 'EEAFigure','EEAFigureFile'] and here.Language() == 'en'</guard-expression
+   >
+  </guard>
+  
+ </transition>
+ <transition transition_id="submitContentReview" title="Submit for internal peer review" new_state="content_pending" trigger="USER" before_script="" after_script="" >
+  <action url="%(content_url)s/content_submit_form" category="workflow" icon="">Submit for internal peer review</action>
+  <guard >
+   <guard-role>ContentManager</guard-role>
+   <guard-expression>python: here.portal_type in  ['Data', 'EEAFigure'] and here.Language() == 'en'</guard-expression
+   >
+  </guard>
+  
+ </transition>
+ <worklist worklist_id="contentReview" title="" >
+  <description>For content review</description>
+  <action url="" category="global" icon="">Content review pennding</action>
+  <guard >
+   <guard-role>Reviewer</guard-role>
+  </guard>
+  <match name="review_state" values="content_pending" />
+ </worklist>
+ <worklist worklist_id="newAndDraft" title="" >
+  <description>Content pending in first draft</description>
+  
+  <guard >
+   <guard-role>Manager</guard-role>
+  </guard>
+  <match name="review_state" values="draft" />
+ </worklist>
+ <worklist worklist_id="pendingWebQA" title="" >
+  <description>pending for web QA (final web publishing)</description>
+  
+  <guard >
+   <guard-role>WebReviewer</guard-role>
+  </guard>
+  <match name="review_state" values="webqa_pending" />
+ </worklist>
+ <variable variable_id="action" for_catalog="False" for_status="True" update_always="True" >
+  <description>The last transition</description>
+  <default>
+   
+   <expression>transition/getId|nothing</expression>
+  </default>
+  <guard >
+  </guard>
+ </variable>
+ <variable variable_id="actor" for_catalog="False" for_status="True" update_always="True" >
+  <description>The ID of the user who performed the last transition</description>
+  <default>
+   
+   <expression>user/getId</expression>
+  </default>
+  <guard >
+  </guard>
+ </variable>
+ <variable variable_id="comments" for_catalog="False" for_status="True" update_always="True" >
+  <description>Comments about the last transition</description>
+  <default>
+   
+   <expression>python:state_change.kwargs.get('comment', '')</expression>
+  </default>
+  <guard >
+  </guard>
+ </variable>
+ <variable variable_id="review_history" for_catalog="False" for_status="False" update_always="False" >
+  <description>Provides access to workflow history</description>
+  <default>
+   
+   <expression>state_change/getHistory</expression>
+  </default>
+  <guard >
+   <guard-permission>Request review</guard-permission>
+   <guard-permission>Review portal content</guard-permission>
+  </guard>
+ </variable>
+ <variable variable_id="time" for_catalog="False" for_status="True" update_always="True" >
+  <description>Time of the last transition</description>
+  <default>
+   
+   <expression>state_change/getDateTime</expression>
+  </default>
+  <guard >
+  </guard>
+ </variable>
+</dc-workflow>
